--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,11 @@
-body {
-  margin: 0;
-}
+@import './utils/utils';
+@import './utils/mixins';
+@import './blocks/header';
+@import './blocks/icon';
+@import './blocks/menu-and-nav';
+@import './blocks/page';
+@import './blocks/top-bar';
+@import './blocks/museum-hours';
+@import './blocks/now-on-view';
+@import './blocks/more-to-explore';
+@import './blocks/contact-us';
